# aiogram-sqla-base

./: pyproject.toml
src/: .env  .env.template  main.py
src/alembic/: env.py
src/alembic/versions/: 2024_09_22_1229-e85502b94278_created_users_table.py
src/core/: config.py
src/core/models/: user.py
