[tool.poetry]
name = "sqla_base"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

alembic = "^1.13.2"
sqlalchemy = "^2.0.35"
asyncpg = "^0.29.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
aiogram = "^3.13.1"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
